
[package]
name = "mqttshell-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
