
[package]
name = "mqttshell-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
